# line_diff

./: .gitignore  Cargo.toml  LICENSE  README.md  input.txt  l1.txt  l2.txt
.github/workflows/: audit.yml  rust.yml
examples/: construction.rs  f1.txt  f2.txt  long-lines.txt  longlines.rs  lowercase.rs  separators.rs  simple.rs  sort.rs  test.txt  twolines.txt
src/: line_diff.rs  main.rs
