[package]
name = "line_diff"
version = "0.5.1"
authors = ["Thomas Niederberger <thomas@niederb.ch>"]
edition = "2018"

license = "MIT OR Apache-2.0"
description = "A tool to compare single lines by tokenizing them into chunks"
readme = "README.md"
homepage = "https://github.com/niederb/line_diff"
repository = "https://github.com/niederb/line_diff"
keywords = ["cli", "diff", "compare", "text"]
categories = ["command-line-utilities"]

[dependencies]
difference = "2.0"
prettytable-rs = "0.8.0"
structopt = "0.3.8"