[package]
name = "line_diff"
version = "0.13.1"
authors = ["Thomas Niederberger <thomas@niederb.ch>"]
edition = "2021"

license = "MIT OR Apache-2.0"
description = "A tool to compare single lines by tokenizing them into chunks"
readme = "README.md"
homepage = "https://github.com/niederb/line_diff"
repository = "https://github.com/niederb/line_diff"
keywords = ["cli", "diff", "compare", "text"]
categories = ["command-line-utilities"]

[lib]
name = "line_diff"
path = "src/line_diff.rs"

[dependencies]
difference = "2.0"
prettytable-rs = "0.9"
structopt = "0.3"
textwrap = { version = "0.16", features = ["terminal_size"] }